@@ -31,6 +31,8 @@ ToDo:
 	- Remove unused ntfs_dirty_inode().
 	- Cleanup super operations declaration in fs/ntfs/super.c.
 	- Wrap flush_dcache_mft_record_page() in #ifdef NTFS_RW.
+	- Add NInoTestSetFoo() and NInoTestClearFoo() macro magic to
+	  fs/ntfs/inode.h and use it to declare NInoTest{Set,Clear}Dirty.
 
 2.1.7 - Enable NFS exporting of mounted NTFS volumes.
 
